# FreeFTP

./: .gitignore  CMakeLists.txt
include/: FTPUtil.h  FreeFTP.h  StrUtil.hpp  StringListModel.h
src/: FTPUtil.cpp  FreeFTP.cpp  StrUtil.cpp  StringListModel.cpp  main.cpp
ui/: FreeFTP.ui
